[package]
name = "mpu6886"
version = "0.1.1"
authors = ["oldsheep68@hotmail.com"]
edition = "2021"

description = "Platform agnostic driver for mpu6886 6-axis IMU"
repository = "https://github.com/oldsheep68/mpu6886"
readme = "README.md"
keywords = ["mpu6886", "imu", "embedded", "driver", "accelerometer"]
license = "MIT"

exclude = [
    "target/*",
]

[dependencies]
embedded-hal = "1.0.0"
libm = "0.2.1"
esp-println       = { version = "0.9.1", features = ["esp32"] }

[dependencies.nalgebra]
default-features = false
version = "0.32.5"

[dev-dependencies]
i2cdev = "0.6.0"
linux-embedded-hal = "0.4.0"
embassy-rp = "0.1.0"
embassy-time = "0.3.0"
embassy-executor = "0.5.0"
static_cell = "2.0.0"
defmt = "0.3.6"